--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 # https://www.builder.io/c/docs/using-your-api-key
 VITE_PUBLIC_BUILDER_KEY=e1b92c56dad54578a206bccd3e05b068
+REACT_APP_API_KEY=AIzaSyDKGWb9jO5RNajJY6-Zi-Nn3qbjrRGCw1w
+
