Dedalo V2.5 Dashborad menu

--- a/package.json
+++ b/package.json
@@ -13,8 +13,15 @@
     "@builder.io/dev-tools": "^1.5.5",
     "@builder.io/react": "^8.0.9",
     "@builder.io/sdk": "^6.0.4",
+    "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "firebase": "^11.3.0",
+    "multer": "^1.4.5-lts.1",
+    "papaparse": "^5.5.2",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5"
   },
